# ai-safety-study

./: .env.example  .gitignore  COLAB_PHASE1_SEMANTIC.py  COLAB_RUN_EXPERIMENTS.py  LICENSE  README.md  analyze_results.py  analyze_scratchpad.py  requirements.txt
ai-village-v1/: README.md  ai-village.py  llm-chat.py  llm-rag.py  llm-test.py
ai-village-v1/data/: base.txt
ai-village-v2/: README.md  app.py  colab_llm_server.ipynb  config.py  llm.py  orchestrator.py  state.py
ai-village-v2/agents/: roundtable.py  scout.py
ai-village-v3/: README.md
ai-village-v3/backend/: arena.py  config.py  database.py  discovery.py  llm.py  main.py  processor.py  requirements.txt
ai-village-v3/frontend/: index.html  package-lock.json  package.json  vite.config.js
ai-village-v4/: README.md  RESEARCH_PIVOT.md
ai-village-v4/backend/: agent_memory.py  agent_status.py  analytics.py  config.py  config_db.py  database.py  database_pg.py  llm.py  (+12 more)
ai-village-v5/: README.md  analyze_results.py  pyproject.toml  view_responses.py
ai-village-v5/src/: sample_responses.md  scenarios.py  scenarios_v2.py  scenarios_v3.py  scorers.py  solvers.py  tasks.py  tasks_v2.py  tasks_v3.py
ai-village-v6/: README.md
configs/: phase2_gpt4o_template.json  phase2_llama70b_template.json  phase3_no_helpfulness.json  phase3_no_rlhf.json  phase3_no_tier_info.json  phase3_safe_helpfulness.json  phase4_baseline_n100.json  phase4_monitored_private_n100.json  phase4_xx_yy_n100.json
src/: __init__.py  analysis.py  config.py  hf_provider.py  run_experiment.py  scenarios.py  scorers.py  solvers.py  tasks.py
(+40 files in other folders)
