[project]
name = "ai-village-v5"
version = "0.1.0"
description = "Observation-Varied Behavior Evaluation - Does model behavior change when told it's being evaluated?"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
